k8s/02-infra.yaml
# --- SQL SERVER ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: plataforma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
       containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
          - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: plataforma
spec:
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433

# --- RABBITMQ ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: plataforma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.1.8-management
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: plataforma
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
    - name: management
      port: 15672
